# LongLink

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: libevent.cmake  libzmq.cmake  redis.cmake  redis_plus_plus.cmake
src/: CMakeLists.txt
src/event/: CMakeLists.txt  event.cpp
src/tool/: cpp_type_recognize.h
